Committing current version of MH-8060.  This is basically what my thesis project looks like for students.

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/index.html
@@ -100,6 +100,27 @@
                           $(this).html("n.a.");
                       }
                   });
+
+                  $('.clipshowCount').each(function ()
+                  {
+                    var element = $(this);
+                    $.ajax({
+                      url: '/clipshow/search/none?mediapackageId=' + $(this).text(),
+                      type: 'GET',
+                      dataType: 'json',
+                      success: function(count) {
+                        var data = count.wrapper.data;
+                        if (data == undefined) {
+                          element.html("No Clipshows Found");
+                        } else if ($.isArray(data)) {
+                          element.html("Clipshows: " + data.length);
+                        } else {
+                          element.html("Clipshows: 1");
+                        }
+                      }
+                    });
+                  });
+
                   $(".thumb").each(function (index)
                   {
                       var src = $(this).attr("src");
