--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
@@ -109,8 +109,10 @@
 
     <div id="editor" class="form-box layout-centered ui-widget">
       <div id="boxes">
-        <div id="leftBox"></div>
+	<div id="leftBoxDescription">Segment list</div>
+	<div id="rightBoxDescription">Inspector</div>
 
+        <div id="leftBox"></div>
         <div id="rightBox">
           <div class="splitNumber">
             <span id="splitIndex">#</span>
