MH-8100 renamed clear split list to clear segment list

--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
@@ -136,7 +136,7 @@
           </div>
         </div>
         <input type="button" title="show all shortcuts" id="shortcuts" value="Shortcuts" />
-        <input type="button" title="clear split split" value="clear split list" id="clearList" />
+        <input type="button" title="Clear segment split" value="Clear segment list" id="clearList" />
       </div>
     </div>
     <div class="clear"></div>
