MH-8100 current time field in editor box properly initialized

--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
@@ -120,7 +120,7 @@
           <div id="descriptionDiv">
             <input type="hidden" id="splitUUID" />
             <div id="descriptionCurrentTimeDiv" class="ui-helper-hidden">
-              <span>current Time:</span> <span id="descriptionCurrentTime" title="current time"></span><br />
+              <span>Current time:</span> <span id="descriptionCurrentTime" title="current time"></span><br />
             </div>
             <a id="clipBeginSet" class="frameButton" title="set current time as new inpoint"></a> <span class="clipItem"
               id="clipBegin"></span> - <span class="clipItem" id="clipEnd"></span> <a id="clipEndSet"
