--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
@@ -65,8 +65,8 @@
           <% $.each(data[j].splits, function(key, split ) {
             split.id = key;
             var duration = previewTracks[0].duration / 1000;
-            var begin = parseFloat(split.clipBegin.toString().replace("s", ""));
-            var end = parseFloat(split.clipEnd.toString().replace("s", ""));
+            var begin = split.clipBegin;
+            var end = split.clipEnd;
             var perc = ((end - begin) / duration) * 99.75;
             var percStr = perc + "";
             if(percStr.indexOf(".") == 1) {
