MH-8100 removed jquery.srt-plugin

--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
@@ -16,9 +16,8 @@
 <script type="text/javascript" src="/admin/js/jquery.xmlns.js"></script>
 <script type="text/javascript" src="/admin/js/ext/shortcut.js"></script>
 <script type="text/javascript" src="jquery.timefield.js"></script>
-<script type="text/javascript" src="jquery.srt.js"></script>
 <script type="text/javascript" src="jquery.mhPlayer.js"></script>
-<script type="text/javascript" src="javascript.js"></script>
+<script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="editor.js"></script>
 </head>
 <body>
