Committing fix for MH-9470 into 1.3.x.

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/watch.html
@@ -18,6 +18,8 @@
     <script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="jquery/plugins/jquery.xslt.js"></script>
     <script type="text/javascript" src="jquery/plugins/jquery.hotkeys-0.7.9.js"></script>
+    <script type="text/javascript" src="js/ext/moment.min.js"></script>
+    <script type="text/javascript" src="js/ext/date.helper.js"></script>
     <script type="text/javascript" src="js/jquery.utils-1.0.js"></script>
     <script type="text/javascript" src="engage-hybrid-player/bridge/lib/FABridge.js"></script>
     <script type="text/javascript" src="engage-hybrid-player/bridge/Videodisplay.js"></script>
