--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
@@ -70,7 +70,7 @@
               var duration = previewTracks[0].duration / 1000;
               var begin = split.clipBegin;
               var end = split.clipEnd;
-              var perc = ((end - begin) / duration) * 100 - 0.01;
+              var perc = ((end - begin) / duration) * 99.75;
               var percStr = perc + "";
               if(percStr.indexOf(".") == 1) {
                percStr = percStr.substr(0, 5);
