--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/index.html
@@ -71,13 +71,6 @@
               var begin = split.clipBegin;
               var end = split.clipEnd;
               var perc = ((end - begin) / duration) * 100.0;
-              var percStr = perc + "";
-              if(percStr.indexOf(".") == 1) {
-               percStr = percStr.substr(0, 8);
-              } else if(percStr.indexOf(".") == 2) {
-               percStr = percStr.substr(0, 9);
-              }
-	      perc = parseFloat(percStr);
 	      perc = (perc > 100) ? (perc / 1000) : perc;
           %>
             <div class="splitSegmentItem<%= !split.enabled ? ' splitSegmentDisabled disabled' : '' %>" 
@@ -145,6 +138,7 @@
             </div>
           </div>
         </div>
+	<div id="newTime"></div>
 	<div id="buttons">
           <input type="button" title="show all shortcuts" id="shortcuts" value="Shortcuts" />
           <input type="button" title="Clear segment split" value="Clear segment list" id="clearList" />
